--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.2.175:3306/tiny_urldb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
-    username: root
-    password: Pxjy2020.
+    url: jdbc:mysql://localhost:3306/tiny_urldb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
+    username: tinyurl_user
+    password: Yy123456
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
       connection-test-query: SELECT 1 FROM DUAL
