--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/tiny_urldb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
     username: tinyurl_user
-    password: Yy123456
+    password: Yy123456.
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
       connection-test-query: SELECT 1 FROM DUAL
