增加uid工厂类

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,8 @@ server:
 tinyurl:
   checkSign: true
   tsThresholdMillis: 300000
+  uidGenType: snowflake
+
+  snowflake:
+    dataCenterId: 0
+    workerId: 0
