--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	</parent>
 	<groupId>com.github</groupId>
 	<artifactId>tinyURL</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>tinyURL</name>
 	<packaging>jar</packaging>
 	<description>tiny url generate</description>
@@ -52,13 +52,12 @@
 	<scm>
 		<url>https://github.com/fofcn/tinyurl</url>
 		<connection>scm:git:https://github.com/fofcn/tinyurl.git</connection>
-		<developerConnection>https://github.com/fofcn/tinyurl.git</developerConnection>
+		<developerConnection>scm:git:https://github.com/fofcn/tinyurl.git</developerConnection>
 		<tag>1.0.0</tag>
 	</scm>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.hub.registry>registry.docker.com</docker.hub.registry>
 	</properties>
 
 
@@ -179,6 +178,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+				</configuration>
 			</plugin>
 
 			<plugin>
