增加短链接服务SQL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - SPRING_PROFILES_ACTIVE=mysql
       - SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/tiny_urldb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
       - SPRING_DATASOURCE_USERNAME=tinyurl_user
-      - SPRING_DATASOUCE_PASSWORD=Yy123456
+      - SPRING_DATASOUCE_PASSWORD=Yy123456.
 
   redis:
     image: redis:4
