--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,13 @@
 			<version>1.14</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.7</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
