--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	</parent>
 	<groupId>com.github</groupId>
 	<artifactId>tinyURL</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>v1.1.0-SNAPSHOT</version>
 	<name>tinyURL</name>
 	<packaging>jar</packaging>
 	<description>tiny url generate</description>
@@ -53,7 +53,7 @@
 		<url>https://github.com/fofcn/tinyurl</url>
 		<connection>scm:git:https://github.com/fofcn/tinyurl.git</connection>
 		<developerConnection>scm:git:https://github.com/fofcn/tinyurl.git</developerConnection>
-		<tag>1.0.0</tag>
+		<tag>v1.0.0</tag>
 	</scm>
 
 	<properties>
