--- a/pom.xml
+++ b/pom.xml
@@ -17,18 +17,17 @@
   * specific language governing permissions and limitations
   * under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.github</groupId>
 	<artifactId>tinyURL</artifactId>
-	<version>v1.1.0-SNAPSHOT</version>
+	<version>v1.1.0</version>
 	<name>tinyURL</name>
 	<packaging>jar</packaging>
 	<description>tiny url generate</description>
@@ -53,7 +52,7 @@
 		<url>https://github.com/fofcn/tinyurl</url>
 		<connection>scm:git:https://github.com/fofcn/tinyurl.git</connection>
 		<developerConnection>scm:git:https://github.com/fofcn/tinyurl.git</developerConnection>
-		<tag>v1.0.0</tag>
+		<tag>v1.1.0</tag>
 	</scm>
 
 	<properties>
