--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,18 @@ services:
       - SPRING_DATASOURCE_USERNAME=tinyurl_user
       - SPRING_DATASOUCE_PASSWORD=Yy123456.
 
-  redis:
-    image: redis:4
-
-  mysql:
-    image: mysql:5.7
-    ports:
-      - "53001:3306"
-    volumes:
-      - "./docker/mysql/volume:/var/lib/mysql"
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES utf8mb4;' --innodb-flush-log-at-trx-commit=0
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "false"
-      MYSQL_DATABASE: "tiny_urldb"
-      MYSQL_USER: "tinyurl_user"
-      MYSQL_PASSWORD: "Yy123456"
+#  redis:
+#    image: redis:4
+#
+#  mysql:
+#    image: mysql:5.7
+#    ports:
+#      - "53001:3306"
+#    volumes:
+#      - "./docker/mysql/volume:/var/lib/mysql"
+#    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES utf8mb4;' --innodb-flush-log-at-trx-commit=0
+#    environment:
+#      MYSQL_ALLOW_EMPTY_PASSWORD: "false"
+#      MYSQL_DATABASE: "tiny_urldb"
+#      MYSQL_USER: "tinyurl_user"
+#      MYSQL_PASSWORD: "Yy123456"
