--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,13 @@ services:
     restart: always
     ports:
       - "53000:53000"
+
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+      - /app/applog/tinyurl:/app/applog/tinyurl
+
+
     networks:
       your-network-name:
 
