--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	</parent>
 	<groupId>com.github</groupId>
 	<artifactId>tinyURL</artifactId>
-	<version>v1.2.0-SNAPSHOT</version>
+	<version>v1.2.0</version>
 	<name>tinyURL</name>
 	<packaging>jar</packaging>
 	<description>tiny url generate</description>
@@ -52,7 +52,7 @@
 		<url>https://github.com/fofcn/tinyurl</url>
 		<connection>scm:git:https://github.com/fofcn/tinyurl.git</connection>
 		<developerConnection>scm:git:https://github.com/fofcn/tinyurl.git</developerConnection>
-		<tag>v1.1.0</tag>
+		<tag>v.1.20</tag>
 	</scm>
 
 	<properties>
