add http/https scheme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       # dataCenterId与WorkerId在多节点部署时必须制定且组合唯一
       - TINYURL_SNOWFLAKE_DATACENTERID=0
       - TINYURL_SNOWFLAKE_WORKERID=0
+      - TINYURL_HTTPSCHEME=https
 
 #  redis:
 #    image: redis:4
